Changed to using 'js.Dynamic.literal' for attr etc.

--- a/example/croc1.html
+++ b/example/croc1.html
@@ -117,5 +117,8 @@ svg {
             </g>
         </g>
     </svg>
+    <p style="color: red">
+      Note: the example is still buggy - animation behaviour not like in the <a href="http://snapsvg.io/demos/#mascot">original</a>.
+    </p>
   </body>
 </html>
